Auto commit  16:45:19.60.